Fix message header spacing

--- a/app/style/common/mixins.less
+++ b/app/style/common/mixins.less
@@ -22,7 +22,7 @@
 // ----------------------------------------------------------------------------
 
 .ellipsis {
-  white-space: nowrap;
+  white-space: pre; // TODO should be nowrap
   overflow: hidden;
   text-overflow: ellipsis;
 }
