--- a/app/style/components/asset/link-preview-asset.less
+++ b/app/style/components/asset/link-preview-asset.less
@@ -66,6 +66,7 @@ link-preview-asset {
 
 .link-preview-info-title-singleline {
   .ellipsis;
+  white-space: nowrap;
 }
 .link-preview-info-title-multiline {
   .ellipsis-multiline(2);
